@@ -1,1 +1,1 @@
-selectWorld.mapType=Type:
+selectWorld.isDeco=Deco Enabled: 
