@@ -1,7 +1,8 @@
 Version 1.1.0
 [list]
 [*]Added beta terrain gen world type. This world type uses BTA biomes but generates terrain based on old beta 1.7.3 terrain. Any seeds that worked in beta will work with this world type, although caves, ores, etc. will be different. This world type is also fully functional with with all vanilla features such as strongholds, villages, mineshafts, ravines, etc.
-[*]Added skylands world type (modified from the old sky dimension generator from beta). I make no claims that this is in any way balanced, I simply added it as something fun and unique. It is currently incomplete as it does not generate villages, temples, or any other structures. They interacted very poorly with the skyland terrain so I will have to create something custom.
+[*]Added skylands world type (modified from the old sky dimension generator from beta). I make no claims that this is in any way balanced, I simply added it as something fun and unique. It is currently incomplete as it does not generate villages, temples, witch huts, or strongholds. They interacted very poorly with the skyland terrain so I will have to create something custom.
+[*]Changed mineshaft components to not generate if they would be entirely floating, and to only generate the shaft supports if they would actually be supporting blocks. This mostly affects skylands generation but may have small effects on other BTA world types. Vanilla world gen as always is unaffected.
 [*]Changed (increased) the depth of terracotta in badlands.
 [*]Changed tall grass and flowers to spawn already covered in snow in snow biomes if they are able to see the sky.
 [*]Changed how fallen logs generate to have variance in their direction and to generate with a stump at one end.
